<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutPopupSort"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayoutPopupSortIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ImageViewPopupSortTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/style_popup_sort_title" />

        <ImageView
            android:id="@+id/ImageViewPopupSortType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:src="@drawable/style_popup_sort_type" />

        <ImageView
            android:id="@+id/ImageViewPopupSortSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:src="@drawable/style_popup_sort_size" />

        <ImageView
            android:id="@+id/ImageViewPopupSortTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/style_popup_sort_time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutPopupSortName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewPopupSortTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:text="@string/Popup_Sort_Title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/TextViewPopupSortType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:text="@string/Popup_Sort_Type"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/TextViewPopupSortSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="@string/Popup_Sort_Size"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/TextViewPopupSortTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:text="@string/Popup_Sort_Time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />
    </LinearLayout>
</LinearLayout>
