<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutPopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayoutPopupHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LinearLayoutCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageViewPopupCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/popup_category" />

            <TextView
                android:id="@+id/TextViewPopupCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Popup_Category"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageViewPopupSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/popup_sort" />

            <TextView
                android:id="@+id/TextViewPopupSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Popup_Sort"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutPopupSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageViewPopupSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/popup_search" />

            <TextView
                android:id="@+id/TextViewPopupSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Popup_Search"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutPopupSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageViewPopupSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/popup_setting" />

            <TextView
                android:id="@+id/TextViewPopupSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Popup_Setting"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutPopupBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ViewFlipper
            android:id="@+id/ViewFlipperPopupContent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
